procps-ng-NEXT
---------------
  * library (API & ABI unchanged)
    tolerates all potential 'cpuinfo' formats              issue #272
    restore the proper main thread tics valuations         issue #280
  * free: -L one line output                               issue #156
  * pgrep: Use only --signal option for signal             Debian #1031765
  * ps: fixed missing or corrupted fields with -m option   Debian #1036631, issue #279
  * tests: dont compare floats with ==                     issue #271
  * top: bad command line arguments yield EXIT_FAILURE     issue #273
  * top: avoids keystroke induced '%Cpu' distortions
  * top: includes VM (guest) tics in 'system' overhead     issue #274
  * top: includes VM (guest) tics with '!' toggle          merge #179
  * top: lessen summary cpu distortions on first display   merge #180
  * top: better backspace handling wtth line edits         issue #278
  * w: Fix musl UT_HOSTSIZE issue

procps-ng-4.0.3
---------------
  * library
    Only changes were in copyright headers and tests
  * docs: Don't install English manpages twice
  * pgrep: Add -H match on userspace signal handler        merge #165
  * pgrep: make --terminal respect other criteria
  * ps: c flag shows command name again                    Debian #1026326
  * ps.1: Match drs description from top.1                 merge #156
  * skill: Match on -p again                               Debian #1025915
  * top: E/P-core toggle ('5' key) added to help
  * vmstat: Referesh memory statistics                     Debian #1027963
  * vmstat: Fix initial si,so,bi,bo,in & cs values         issue #15
                                                           Debian #668580
  * vmstat: Fix conversion errors due to precision         merge #75
  * w: Add --pids option                                   merge #159
  * watch: Pass through beep                               issue #104
  * watch: -r option to not re-exec on SIGWINCH            merge #125